--- a/src/app/extension/extension.component.css
+++ b/src/app/extension/extension.component.css
@@ -241,12 +241,12 @@ section{
 .info-container span,
 .tags a{
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2), 0px 4px 0px -1px rgba(0, 0, 0, 0.19);
-    background: white;
+    color: white;
+    background: black;
     margin-top: 7px;
-    margin-left: 15px;
+    margin-left: 3%;
     border-radius: 3px;
     font-size: 13px;
-    color: #333;
     text-decoration: none;
 }
 .github-info span{
@@ -297,10 +297,10 @@ section{
 }
 
 .user-menu a{
-    background: white;
-    color: black;
+    background: black;
+    color: white;
     border: 1px solid black;
-    padding: 5%;
+    padding: 5% 0;
     text-align: center;
     box-sizing: border-box;
     width: 30%;
@@ -329,6 +329,8 @@ section{
     }
     .extension-info-container-mobile{
         display: block;
+        z-index: 5;
+        position: relative;
     }
     .extension-info .circle{
         width: 130%;
@@ -349,14 +351,15 @@ section{
         position: relative;
     }
     h1{
-        font-size: 5.8em;
+        font-size: 4.2em;
         font-weight: bold;
         word-break: break-word;
+        margin-top: -12px;
     }
     .info{
         width: 95%;
         display: inline-block;
-        padding-bottom: 20px;
+        padding-bottom: 15px;
     }
     .sliding-info-container{
         display: none;
@@ -372,14 +375,18 @@ section{
     }
     .tags{
         display: block;
-        padding: 20px 0px;
         text-align: center;
-        display: block;
+        display: flex;
+        justify-content: center;
     }
     .tags a{
-        float: none;
         margin-left: 0px;
         margin-right: 15px;
+        height: 22px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 11px;
+        padding: 0 6px;
     }
     .user-menu a{
         padding: 5% 0;
@@ -387,6 +394,14 @@ section{
     }
     .github-info{
         text-align: center;
+    }
+    .admin-menu{
+        margin-bottom: 10px;
+        margin-top: 4px;
+    }
+    .admin-menu button{
+        opacity: 1;
+        display: block;
     }
 }
 @-webkit-keyframes fadeIn {
