--- a/src/app/pendings/pendings.component.css
+++ b/src/app/pendings/pendings.component.css
@@ -205,6 +205,7 @@ pagination-template ul{
     .hover-circle{
         width: 15%;
         height: 15%;
+        opacity: 0;
     }
     .logo-container{
         width: 25%;
